# pyhearts

./: .gitignore  CHANGELOG.md  ENHANCED_RPEAK_IMPROVEMENT_REPORT.md  FEATURE_ENHANCEMENT_SUGGESTIONS.md  FEATURE_REFERENCE.md  IMPROVEMENTS_SUMMARY.md  LICENSE.md  METHODS_R_PEAK_AND_EPOCHING.md  METHODS_SECTION_UPDATED.md  POLARITY_AND_QUALITY_FIXES.md  README.md  TWAVE_TUNING_COMPLETE.md  __init__.py  analyze_missing_t_peaks.py  compare_t_peaks_sel104.py  demo_ecg_fitting_abilities.py  evaluate_ecgpuwave_style_accuracy.py  evaluate_t_peak_accuracy.py  explain_std_dict_none.py  pyproject.toml  regenerate_sel104_results.py  rpeak_detection_analysis.csv  rpeak_failure_investigation.csv  sel104_epochs_15s.csv  sel104_output_15s.csv  test_half_height_limitations.py  test_hrv_metrics.py  test_p_validation_quick.py  test_p_validation_with_gt.py  test_qtc_features.py  test_single_r_fit.py  test_slope_features.py  test_st_segment_features.py  test_variability_metrics.py  underperforming_subjects_analysis.csv
.ipynb_checkpoints/: __init__-checkpoint.py
analysis_scripts/: README.md  explain_std_dict_none.py  predict_age_from_features.py  test_half_height_limitations.py  test_p_validation_impact.py  test_performance_verification.py  test_qtdb_detection_rates.py  test_single_r_fit.py  test_st_segment_features.py  test_validation_removal_impact.py  test_variability_metrics.py
archive/: qrs_onset_verification.csv  test_t_peak_detection_fix.py
archive/comparison_results/: ecgpuwave_vs_pyhearts_latest_run.csv  ecgpuwave_vs_pyhearts_latest_run_summary.txt  summary_report.txt
archive/ecgpuwave_p_method_test/: summary_report.txt  test_results.csv
archive/fiducial_interval_analysis_20260107_090351/: mean_absolute_deviations.json
archive/fiducial_interval_analysis_20260107_100522/: mean_absolute_deviations.json
archive/fiducial_interval_analysis_20260107_100828/: mean_absolute_deviations.json
archive/fiducial_interval_analysis_20260107_100904/: mean_absolute_deviations.json
benchmark/: README.md  __init__.py  debug_detection.py  debug_inverted_detection.py  diagnose_twave.py  generate_test_data.py  plot_normal_vs_inverted.py  plot_test_ecg.py  run_benchmark.py  run_inverted_qtdb.py  run_qtdb_analysis.py  test_inverted_performance.py  test_simulated_signal_performance.py
core/: __init__.py  fit.py
documentation/: FEATURE_ENHANCEMENT_SUGGESTIONS.md  PyHEARTS vs ecgpuwave Comparison Summary.rtf  README.md
ecgpuwave-1.3.4/: ecgpuwave
feature/: HRV.py  intervals.py
fitmetrics/: ._rmse.py  ._rsquared.py  __init__.py  rmse.py
objs/: __init__.py
plots/: __init__.py  dynamicoffset.py  risedecay.py
plts/: ._detrend.py  ._epochs.py  ._fit.py  ._fwhm.py  ._labeledpeaks.py  ._rpeaks.py  __init__.py  detrend.py  fwhm.py  labeledpeaks.py
processing/: ._bounds.py  detrend.py  epoch.py  processcycle.py  waveletoffset.py
pyhearts/: __init__.py  config.py
qtdb_inverted-sig_subjects_analysis/: README.md  compare_r_peaks.py  compare_r_peaks_amplitude.py  compare_r_peaks_simple.py  sele0121_rpeak_comparison.csv  sele0121_rpeak_comparison_amplitude.csv  sele0211_rpeak_comparison.csv  sele0211_rpeak_comparison_amplitude.csv  visualize_rpeak_differences.py
qtdb_results/: test_ecgpuwave_p_method.py
sim/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_feature.py  test_fit.py  test_fitmetrics.py  test_integration.py  test_processing.py  test_sim.py
(+313 files in other folders)
